biografía modificada (falta media quary al final)

--- a/scss/miestilo.css
+++ b/scss/miestilo.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-/* General: Estilos de la página en generla y los elementos que no cambian: Footer y Nav */
+/* General: Estilos de la página en general y los elementos que no cambian: Footer, Title  y Nav */
+/* General: Estilos de la página en general y los elementos que no cambian: Footer, Title  y Nav */
+/* General: Estilos de la página en general y los elementos que no cambian: Footer, Title y Nav */
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap");
 * {
   padding: 0;
@@ -139,6 +141,8 @@ footer {
 }
 
 /*Index*/
+/*Index*/
+/*Index*/
 .img-index-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -238,36 +242,43 @@ span {
 }
 
 /*Novedades */
+/*Novedades */
+/*Novedades */
 .newsContainer {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: [x0] 1fr [x1] 1fr [x2];
-      grid-template-columns: [x0] 1fr [x1] 1fr [x2];
-  -ms-grid-rows: [y0] 1fr [y1] 1fr [y2];
-      grid-template-rows: [y0] 1fr [y1] 1fr [y2];
-      grid-template-areas: "News1 News2" "News3 News4" "News5 News6";
+  display: block;
+  -ms-grid-columns: [x0] 1fr [x1] 1fr [x2] 1fr;
+      grid-template-columns: [x0] 1fr [x1] 1fr [x2] 1fr;
+  -ms-grid-rows: [y0] 1fr [y1] 1fr [y2] 1fr;
+      grid-template-rows: [y0] 1fr [y1] 1fr [y2] 1fr;
   background-image: url(../images/background.jpg);
-  background-color: #4f4d4d;
+  background-size: cover;
+  background-position: center;
 }
 
 .newsContainer div {
   background-color: #4f4d4d;
   background-color: transparent;
-  border-style: solid 2px;
+  max-width: 1600px;
+  overflow: scroll;
+  border-style: solid 4px;
   border-style: outset;
-  margin: 1px;
-  padding: 1px;
+  margin: 15px;
+  padding-right: 22px;
+  padding-left: 22px;
 }
 
 .newsImg {
-  width: 100%;
-  height: 100%;
-  border-radius: 5px 5px 0 0;
+  width: 100vh;
+  border: none;
 }
 
 .News5_media iframe {
   background: transparent;
   border: none;
+  height: 500px;
+  width: 100%;
 }
 
 .News1_title, .News2_title, .News3_title, .News4_title, .News5_title, .News6_title {
@@ -288,103 +299,39 @@ span {
   border: none;
 }
 
-.News1_title {
-  grid-area: "News1";
-  background: #3b5999;
-  -ms-grid-column: x0;
-      grid-column-start: x0;
-  grid-column-end: x1;
+/*Biografía*/
+/*Biografía*/
+/*Biografía*/
+.biographyTitle {
+  font-size: 264%;
 }
 
-.News1_text {
-  grid-area: "News1";
-  background: #cc0000;
-  -ms-grid-column: x0;
-      grid-column-start: x0;
-  grid-column-end: x1;
+.biographyQuote {
+  font-size: 154%;
 }
 
-.News1_media {
-  grid-area: "News1";
-  background: #e4405f;
-  -ms-grid-column: x1;
-      grid-column-start: x1;
-  grid-column-end: x2;
+.biographyPic {
+  width: 65%;
 }
 
-.News2_title {
-  grid-area: "News2";
-  background: #53245785;
+.biographyStyle0 {
+  color: #d9d9d9;
+  margin: 5%;
+  padding: 2%;
+  text-align: center;
 }
 
-.News2_text {
-  grid-area: "News2";
-  background: aqua;
+.biographyPicContainer {
+  margin: 2%;
 }
 
-.News2_media {
-  grid-area: "News2";
-  background: chartreuse;
-}
-
-.News3_title {
-  grid-area: "News3";
-  background: #53245785;
-}
-
-.News3_text {
-  grid-area: "News3";
-  background: aqua;
-}
-
-.News3_media {
-  grid-area: "News3";
-  background: chartreuse;
-}
-
-.News4_title {
-  grid-area: "News4";
-  background: #53245785;
-}
-
-.News4_text {
-  grid-area: "News4";
-  background: aqua;
-}
-
-.News4_media {
-  grid-area: "News4";
-  background: chartreuse;
-}
-
-.News5_title {
-  grid-area: "News4";
-  background: #53245785;
-}
-
-.News5_text {
-  grid-area: "News4";
-  background: aqua;
-}
-
-.News5_media {
-  grid-area: "News4";
-  background: chartreuse;
-}
-
-.News6_title {
-  grid-area: "News4";
-  background: #53245785;
-}
-
-.News6_text {
-  grid-area: "News4";
-  background: aqua;
-}
-
-.News6_media {
-  grid-area: "News4";
-  background: chartreuse;
+.biographyStyle1 p {
+  text-align: justify;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  margin-left: 21%;
+  margin-right: 21%;
+  font-size: 125%;
 }
 
 @-webkit-keyframes transitionInPic {
