--- a/scss/miestilo.css
+++ b/scss/miestilo.css
@@ -60,6 +60,20 @@
   font-size: 32px;
 }
 
+.irArriba {
+  text-align: center;
+  font-size: 34px;
+  color: #fff;
+}
+
+.irArriba a {
+  text-decoration: none;
+}
+
+.irArriba a:hover {
+  text-decoration: underline;
+}
+
 .redes-ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -328,8 +342,8 @@ span {
 
 .biographyStyle1 p {
   text-align: justify;
-  margin-top: 0%;
-  margin-bottom: 0%;
+  margin-top: 5%;
+  margin-bottom: 5%;
   margin-left: 21%;
   margin-right: 21%;
   font-size: 125%;
@@ -342,12 +356,92 @@ span {
   width: 50%;
   height: 50%;
   margin: 0 auto;
+  -webkit-animation: transitionInPic 1.25s;
+          animation: transitionInPic 1.25s;
 }
 
 .spotifyPlayer {
   text-align: center;
+  max-height: 400px;
+  padding-top: 80px;
+  -webkit-animation: transitionInPic 1.25s;
+          animation: transitionInPic 1.25s;
 }
 
+/******************************************************************************************************************/
+/*Contacto*/
+/*Contacto*/
+/*Contacto*/
+.blackBackground {
+  background-color: #000000 !important;
+}
+
+.contact-form {
+  margin-top: 10%;
+  margin-bottom: 15;
+  width: 80%;
+}
+
+.contact-form .form-control {
+  border-radius: 1rem;
+}
+
+.contact-image {
+  text-align: center;
+}
+
+.contact-image img {
+  border-radius: 6rem;
+  width: 20%;
+  margin-top: -3%;
+  -webkit-animation: transitionInPic 1.25s;
+          animation: transitionInPic 1.25s;
+}
+
+.contact-form form {
+  padding: 10%;
+}
+
+.contact-form form .row {
+  margin-bottom: -7%;
+}
+
+.contact-form h3 {
+  margin-bottom: 8%;
+  margin-top: -10%;
+  text-align: center;
+  color: #0062cc;
+  font-size: 3vh;
+}
+
+.contact-form .btnContact {
+  width: 50%;
+  border: none;
+  border-radius: 1rem;
+  padding: 1.5%;
+  background: #dc3545;
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+}
+
+.btnContactSubmit {
+  width: 50%;
+  border-radius: 1rem;
+  padding: 1.5%;
+  color: #000000;
+  background-color: #0062cc;
+  border: none;
+  cursor: pointer;
+}
+
+.form-group input, .form-group textarea {
+  font-size: 24px;
+}
+
+/*Para la imágen de Stand Annie de la página de Contancto, utilicé los mismos estilos que la imágen del Index/*
+
+/***********************************************************************************************************************/
 @-webkit-keyframes transitionInPic {
   from {
     opacity: 0;
@@ -360,7 +454,6 @@ span {
             transform: rotateX(0);
   }
 }
-
 @keyframes transitionInPic {
   from {
     opacity: 0;
@@ -371,6 +464,87 @@ span {
     opacity: .8;
     -webkit-transform: rotateX(0);
             transform: rotateX(0);
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .title {
+    font-size: 50px;
+    width: 100%;
+  }
+  .flex-container li {
+    display: inline-block;
+    margin: 1px;
+    font-size: 18px;
+    line-height: 30px;
+    width: 120px;
+  }
+  .img-index {
+    width: 160%;
+    max-height: 1100px;
+    max-width: 1500px;
+  }
+  .buttonContainer {
+    min-height: 15vh;
+  }
+  .btnIndex {
+    width: 140px;
+    height: 40px;
+    border: none;
+    color: white;
+    border-radius: 4px;
+    -webkit-transition: 0.3s ease-out;
+    transition: 0.3s ease-out;
+    font-size: 1.5rem;
+    outline: none;
+    border: 0.5px solid #fff;
+    position: relative;
+    z-index: 1;
+  }
+  .News1_title, .News2_title, .News3_title, .News4_title, .News5_title, .News6_title {
+    font-size: 20px;
+  }
+  .News1_text, .News2_text, .News3_text, .News4_text, .News5_text, .News6_text {
+    font-size: 16px;
+  }
+  .newsImg {
+    width: 100%;
+  }
+  .News5_media iframe {
+    width: 100%;
+    height: 160px;
+  }
+  .biographyTitle {
+    font-size: 154%;
+  }
+  .biographyQuote {
+    font-size: 94%;
+  }
+  .biographyPic {
+    width: 100%;
+    background-color: black;
+  }
+  .biographyStyle1 p {
+    margin-left: 1%;
+    margin-right: 1%;
+    font-size: 125%;
+  }
+  .carousel-item img {
+    width: 68%;
+    margin: 0 auto;
+  }
+  .spotifyPlayer {
+    margin-bottom: 180px;
+  }
+  .contact-image img {
+    width: 40%;
+    margin-top: -7%;
+  }
+  .form-group input, .form-group textarea {
+    font-size: 16px;
+  }
+  .irArriba {
+    font-size: 16px;
   }
 }
 /*# sourceMappingURL=miestilo.css.map */
