--- a/scss/miestilo.css
+++ b/scss/miestilo.css
@@ -275,7 +275,7 @@ span {
   background-color: #4f4d4d;
   background-color: transparent;
   max-width: 1600px;
-  overflow: scroll;
+  overflow: hidden;
   border-style: solid 4px;
   border-style: outset;
   margin: 15px;
@@ -286,6 +286,7 @@ span {
 .newsImg {
   width: 100vh;
   border: none;
+  overflow: hidden;
 }
 
 .News5_media iframe {
@@ -467,17 +468,39 @@ span {
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .newsImg {
+    width: 100%;
+  }
+  .biographyPic {
+    width: 100%;
+    background-color: black;
+  }
+  .biographyStyle1 p {
+    margin-left: 1%;
+    margin-right: 1%;
+    font-size: 175%;
+  }
+  .flex-container li {
+    display: inline-block;
+    margin: 10px;
+    font-size: 30px;
+    text-align: center;
+    line-height: 40px;
+    width: 250px;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .title {
     font-size: 50px;
     width: 100%;
   }
   .flex-container li {
-    display: inline-block;
     margin: 1px;
     font-size: 18px;
     line-height: 30px;
-    width: 120px;
+    width: 160px;
   }
   .img-index {
     width: 160%;
@@ -527,7 +550,7 @@ span {
   .biographyStyle1 p {
     margin-left: 1%;
     margin-right: 1%;
-    font-size: 125%;
+    font-size: 100%;
   }
   .carousel-item img {
     width: 68%;
