--- a/scss/miestilo.scss
+++ b/scss/miestilo.scss
@@ -262,7 +262,7 @@ span {
         background-color: #4f4d4d;
         background-color: transparent;
         max-width: 1600px;
-        overflow:scroll;
+        overflow:hidden;
         border-style: solid 4px;
         border-style: outset;
         margin: 15px;
@@ -274,6 +274,7 @@ span {
 .newsImg {
         width: 100vh;
         border: none;
+        overflow: hidden;
 
 }
 
@@ -462,6 +463,37 @@ span {
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200&display=swap');
 
 
+
+@media only screen and (min-width: 768px) {
+    .newsImg {
+        width: 100%;
+
+}
+    
+    .biographyPic {
+    width:  100%;
+    background-color: black;
+}
+
+    .biographyStyle1 p{
+    margin-left: 1%;
+    margin-right: 1%;
+    font-size: 175%;
+                
+}
+
+.flex-container li {
+    display: inline-block;
+    margin: 10px;
+    font-size: 30px;
+    text-align: center;
+    line-height: 40px;
+    width:250px;
+   
+}
+
+}
+
 @media only screen and (max-width: 600px) {
         .title {
             font-size: 50px;
@@ -469,11 +501,10 @@ span {
         }
 
         .flex-container li {
-            display: inline-block;
             margin: 1px;
             font-size: 18px;
             line-height: 30px;
-            width: 120px;
+            width: 160px;
            
         }
 
@@ -541,7 +572,7 @@ span {
         .biographyStyle1 p{
             margin-left: 1%;
             margin-right: 1%;
-            font-size: 125%;
+            font-size: 100%;
                         
         }
 
@@ -571,3 +602,5 @@ span {
         }
 
     }
+
+  
